# iota-verbum-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.sha256  Procfile  README.md  SECURITY.md  WHITEPAPER_INPUTS_PACK.md  alembic.ini  pyproject.toml  railway.json
.pytest_tmp/: test_determinism_cross_domaincurrent  test_golden_snapshotscurrent  test_no_invention_cross_domaincurrent
alembic/: env.py
docs/: ATTESTATION.md  CASEFILE.md  CLONABLE_INTEGRITY.md  CORE_BOUNDARY.md  DEMO_APP_ARCHITECTURE.md  DEMO_APP_IMPLEMENTATION_PLAN.md  DEMO_FIXTURES.md  DEPLOY_DEMO_APP.md  DETERMINISM.md  INTEGRITY_PATH.md  INTEGRITY_THRESHOLD.md  LEGACY_AUDIT.md  LEGACY_RECOVERY.md  MIGRATION_NOTES.md  NEUROSYMBOLIC_BOUNDARY.md  NEXT_PHASES.md  NONDETERMINISM_BOUNDARY.md  PROCESSING_INTEGRITY.md  PROOF_TRACE_VIEWER.md  RAILWAY_DEPLOYMENT.md  RAILWAY_RUNBOOK.md  SECURITY.md  SELF_CASEFILE_DEMO.md  WHITEPAPER.md  proof_trace_viewer.html
rulesets/: ruleset.core.v1.json
schemas/: agent_plan.schema.json  agent_step_record.schema.json  agent_task.schema.json  attestation_record.schema.json  casefile.schema.json  causal_edge.schema.json  causal_findings.schema.json  causal_graph.schema.json  causal_narrative_v2.schema.json  claim.schema.json  claim_graph.schema.json  constraint_diff.schema.json  constraint_diff_narrative_v2.schema.json  constraint_narrative_v2.schema.json  constraint_report.schema.json  constraint_violation.schema.json  counterfactual_narrative_v2.schema.json  counterfactual_result.schema.json  counterfactual_task.schema.json  critical_path.schema.json  critical_path_narrative_v2.schema.json  derived_edges.schema.json  entity.schema.json  event.schema.json  evidence_bundle.schema.json  evidence_pack.schema.json  evidence_ref.schema.json  graph_findings.schema.json  legal_contract.json  narrative.schema.json  narrative_v2.schema.json  nda.json  repair_action.schema.json  repair_hint.schema.json  repair_hints.schema.json  repair_hints_narrative_v2.schema.json  repair_narrative_v2.schema.json  repair_plan.schema.json  repair_run_record.schema.json  ruleset.schema.json  (+12 more)
scripts/: clonable_integrity.ps1  clonable_integrity.sh  create_tampered_ledger_copy.py  demo.py  determinism_check.py  extract_ledger_dir.py  generate_manifest.py  generate_provenance_report.py  manifest_hash.py  open_integrity_demo.ps1  run_integrity_demo.ps1  self_casefile.ps1  self_casefile_run_id.py  tamper_casefile.ps1  tamper_casefile.sh  verify_reproducibility.ps1  verify_reproducibility.sh  view_provenance.py
src/: deterministic_ai.py  main.py
tests/: conftest.py  test_agent_cli.py  test_attest.py  (+60 more)
(+178 files in other folders)
