[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iota-verbum-core"
version = "0.3.0"
description = "Deterministic core engine and production API for Iota Verbum."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Iota Verbum" }]
dependencies = [
  "alembic>=1.14.1",
  "fastapi>=0.115.0",
  "langdetect>=1.0.9",
  "langid>=1.1.6",
  "pdf2image>=1.16.0",
  "pdfplumber>=0.10.0",
  "pillow>=10.0.0",
  "pydantic>=2.9.0",
  "pytesseract>=0.3.10",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest==8.3.4",
  "ruff==0.6.8",
]

[project.scripts]
deterministic-ai = "deterministic_ai:main"
iota-verbum-api = "main:run"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["deterministic_ai"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core", "core.*", "domains", "domains.*", "iota_verbum_api", "iota_verbum_api.*"]

[tool.setuptools.package-data]
domains = ["**/*.json"]

[tool.ruff]
cache-dir = "C:/Users/chris/AppData/Local/Temp/iota_verbum_ruff_cache"
exclude = [".pytest_tmp", ".ruff_cache", ".repro_check", "tmp_goldens", "tmp_repro_check"]
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
